@@ -3,19 +3,19 @@ package com.yahoo.vespa.hosted.controller.maintenance;
 
 import com.yahoo.component.Version;
 import com.yahoo.config.provision.zone.UpgradePolicy;
+import com.yahoo.config.provision.zone.ZoneApi;
 import com.yahoo.config.provision.zone.ZoneId;
 import com.yahoo.vespa.hosted.controller.api.integration.configserver.Node;
 import com.yahoo.vespa.hosted.controller.application.SystemApplication;
 import com.yahoo.vespa.hosted.controller.deployment.DeploymentTester;
 import com.yahoo.vespa.hosted.controller.integration.NodeRepositoryMock;
+import com.yahoo.vespa.hosted.controller.integration.ZoneApiMock;
 import com.yahoo.vespa.hosted.controller.versions.VespaVersion;
 import org.junit.Before;
 import org.junit.Test;
 
 import java.time.Duration;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -27,10 +27,10 @@ import static org.junit.Assert.assertTrue;
  */
 public class SystemUpgraderTest {
 
-    private static final ZoneId zone1 = ZoneId.from("prod", "eu-west-1");
-    private static final ZoneId zone2 = ZoneId.from("prod", "us-west-1");
-    private static final ZoneId zone3 = ZoneId.from("prod", "us-central-1");
-    private static final ZoneId zone4 = ZoneId.from("prod", "us-east-3");
+    private static final ZoneApi zone1 = ZoneApiMock.fromId("prod.eu-west-1");
+    private static final ZoneApi zone2 = ZoneApiMock.fromId("prod.us-west-1");
+    private static final ZoneApi zone3 = ZoneApiMock.fromId("prod.us-central-1");
+    private static final ZoneApi zone4 = ZoneApiMock.fromId("prod.us-east-3");
 
     private DeploymentTester tester;
 
@@ -50,15 +50,15 @@ public class SystemUpgraderTest {
 
         Version version1 = Version.fromString("6.5");
         // Bootstrap a system without host applications
-        tester.configServer().bootstrap(List.of(zone1, zone2, zone3, zone4), SystemApplication.configServer,
-                                        SystemApplication.zone);
+        tester.configServer().bootstrap(List.of(zone1.getId(), zone2.getId(), zone3.getId(), zone4.getId()),
+                                        SystemApplication.configServer, SystemApplication.proxy);
         // Fail a few nodes. Failed nodes should not affect versions
         failNodeIn(zone1, SystemApplication.configServer);
-        failNodeIn(zone3, SystemApplication.zone);
+        failNodeIn(zone3, SystemApplication.proxy);
         tester.upgradeSystem(version1);
         systemUpgrader.maintain();
         assertCurrentVersion(SystemApplication.configServer, version1, zone1, zone2, zone3, zone4);
-        assertCurrentVersion(SystemApplication.zone, version1, zone1, zone2, zone3, zone4);
+        assertCurrentVersion(SystemApplication.proxy, version1, zone1, zone2, zone3, zone4);
 
         // Controller upgrades
         Version version2 = Version.fromString("6.6");
@@ -71,72 +71,72 @@ public class SystemUpgraderTest {
         // Other zones remain on previous version
         assertWantedVersion(SystemApplication.configServer, version1, zone2, zone3, zone4);
         // Zone application is not upgraded yet
-        assertWantedVersion(SystemApplication.zone, version1, zone1, zone2, zone3, zone4);
+        assertWantedVersion(SystemApplication.proxy, version1, zone1, zone2, zone3, zone4);
 
         // zone1: zone-config-server upgrades
         completeUpgrade(SystemApplication.configServer, version2, zone1);
 
-        // zone 1: zone-application upgrades
+        // zone 1: proxy-application upgrades
         systemUpgrader.maintain();
-        assertWantedVersion(SystemApplication.zone, version2, zone1);
-        completeUpgrade(SystemApplication.zone, version2, zone1);
-        assertTrue("Deployed zone application",
-                   tester.configServer().application(SystemApplication.zone.id()).isPresent());
+        assertWantedVersion(SystemApplication.proxy, version2, zone1);
+        completeUpgrade(SystemApplication.proxy, version2, zone1);
+        assertTrue("Deployed proxy application",
+                   tester.configServer().application(SystemApplication.proxy.id()).isPresent());
 
         // zone 2, 3 and 4: still targets old version
         assertWantedVersion(SystemApplication.configServer, version1, zone2, zone3, zone4);
-        assertWantedVersion(SystemApplication.zone, version1, zone2, zone3, zone4);
+        assertWantedVersion(SystemApplication.proxy, version1, zone2, zone3, zone4);
 
         // zone 2 and 3: upgrade does not start until zone 1 zone-application config converges
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version1, zone2, zone3);
-        convergeServices(SystemApplication.zone, zone1);
+        convergeServices(SystemApplication.proxy, zone1);
 
         // zone 2 and 3: zone-config-server upgrades, first in zone 2, then in zone 3
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version2, zone2, zone3);
         assertWantedVersion(SystemApplication.configServer, version1, zone4);
-        assertWantedVersion(SystemApplication.zone, version1, zone2, zone3, zone4);
+        assertWantedVersion(SystemApplication.proxy, version1, zone2, zone3, zone4);
         completeUpgrade(SystemApplication.configServer, version2, zone2);
 
         // zone-application starts upgrading in zone 2, while zone-config-server completes upgrade in zone 3
         systemUpgrader.maintain();
-        assertWantedVersion(SystemApplication.zone, version2, zone2);
-        assertWantedVersion(SystemApplication.zone, version1, zone3);
+        assertWantedVersion(SystemApplication.proxy, version2, zone2);
+        assertWantedVersion(SystemApplication.proxy, version1, zone3);
         completeUpgrade(SystemApplication.configServer, version2, zone3);
 
-        // zone 2 and 3: zone-application upgrades in parallel
+        // zone 2 and 3: proxy-application upgrades in parallel
         systemUpgrader.maintain();
-        assertWantedVersion(SystemApplication.zone, version2, zone2, zone3);
-        completeUpgrade(SystemApplication.zone, version2, zone2, zone3);
-        convergeServices(SystemApplication.zone, zone2, zone3);
+        assertWantedVersion(SystemApplication.proxy, version2, zone2, zone3);
+        completeUpgrade(SystemApplication.proxy, version2, zone2, zone3);
+        convergeServices(SystemApplication.proxy, zone2, zone3);
 
         // zone 4: zone-config-server upgrades
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version2, zone4);
-        assertWantedVersion(SystemApplication.zone, version1, zone4);
+        assertWantedVersion(SystemApplication.proxy, version1, zone4);
         completeUpgrade(SystemApplication.configServer, version2, zone4);
 
         // System version remains unchanged until final application upgrades
         tester.computeVersionStatus();
         assertSystemVersion(version1);
 
-        // zone 4: zone-application upgrades
+        // zone 4: proxy-application upgrades
         systemUpgrader.maintain();
-        assertWantedVersion(SystemApplication.zone, version2, zone4);
-        completeUpgrade(SystemApplication.zone, version2, zone4);
+        assertWantedVersion(SystemApplication.proxy, version2, zone4);
+        completeUpgrade(SystemApplication.proxy, version2, zone4);
 
         // zone 4: System version remains unchanged until config converges
         tester.computeVersionStatus();
         assertSystemVersion(version1);
-        convergeServices(SystemApplication.zone, zone4);
+        convergeServices(SystemApplication.proxy, zone4);
         tester.computeVersionStatus();
         assertSystemVersion(version2);
 
         // Next run does nothing as system is now upgraded
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version2, zone1, zone2, zone3, zone4);
-        assertWantedVersion(SystemApplication.zone, version2, zone1, zone2, zone3, zone4);
+        assertWantedVersion(SystemApplication.proxy, version2, zone1, zone2, zone3, zone4);
     }
 
     @Test
@@ -144,8 +144,8 @@ public class SystemUpgraderTest {
         SystemUpgrader systemUpgrader = systemUpgrader(UpgradePolicy.create().upgrade(zone1));
 
         // Bootstrap system
-        tester.configServer().bootstrap(Collections.singletonList(zone1), SystemApplication.configServer,
-                                        SystemApplication.zone);
+        tester.configServer().bootstrap(List.of(zone1.getId()), SystemApplication.configServer,
+                                        SystemApplication.proxy);
         Version version1 = Version.fromString("6.5");
         tester.upgradeSystem(version1);
 
@@ -157,9 +157,9 @@ public class SystemUpgraderTest {
         systemUpgrader.maintain();
         completeUpgrade(SystemApplication.configServer, version2, zone1);
         systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.zone, version2, zone1);
+        completeUpgrade(SystemApplication.proxy, version2, zone1);
         tester.computeVersionStatus();
-        assertSystemVersion(version1); // Unchanged until zone-application converges
+        assertSystemVersion(version1); // Unchanged until proxy-application converges
 
         // Controller upgrades again
         Version version3 = Version.fromString("6.7");
@@ -167,8 +167,8 @@ public class SystemUpgraderTest {
         assertSystemVersion(version1);
         assertControllerVersion(version3);
 
-        // zone 1: zone-application converges and system version changes
-        convergeServices(SystemApplication.zone, zone1);
+        // zone 1: proxy-application converges and system version changes
+        convergeServices(SystemApplication.proxy, zone1);
         tester.computeVersionStatus();
         assertSystemVersion(version2);
         assertControllerVersion(version3);
@@ -184,7 +184,7 @@ public class SystemUpgraderTest {
         );
 
         Version version1 = Version.fromString("6.5");
-        tester.configServer().bootstrap(List.of(zone1, zone2, zone3, zone4), SystemApplication.all(), Optional.empty());
+        tester.configServer().bootstrap(List.of(zone1.getId(), zone2.getId(), zone3.getId(), zone4.getId()), SystemApplication.all());
         tester.upgradeSystem(version1);
         systemUpgrader.maintain();
         assertCurrentVersion(SystemApplication.all(), version1, zone1, zone2, zone3, zone4);
@@ -196,33 +196,29 @@ public class SystemUpgraderTest {
 
         // System upgrades in zone 1:
         systemUpgrader.maintain();
-        List<SystemApplication> allExceptZoneAndConfig = List.of(SystemApplication.configServerHost,
-                                                                 SystemApplication.proxyHost);
-        completeUpgrade(allExceptZoneAndConfig, version2, zone1);
+        List<SystemApplication> allExceptZone = List.of(SystemApplication.configServerHost,
+                                                        SystemApplication.configServer,
+                                                        SystemApplication.proxyHost,
+                                                        SystemApplication.tenantHost);
+        completeUpgrade(allExceptZone, version2, zone1);
         systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.configServer, version2, zone1);
-        systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.zone, version2, zone1);
-        convergeServices(SystemApplication.zone, zone1);
+        completeUpgrade(SystemApplication.proxy, version2, zone1);
+        convergeServices(SystemApplication.proxy, zone1);
         assertWantedVersion(SystemApplication.all(), version1, zone2, zone3, zone4);
 
         // zone 2 and 3:
         systemUpgrader.maintain();
-        completeUpgrade(allExceptZoneAndConfig, version2, zone2, zone3);
+        completeUpgrade(allExceptZone, version2, zone2, zone3);
         systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.configServer, version2, zone2, zone3);
-        systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.zone, version2, zone2, zone3);
-        convergeServices(SystemApplication.zone, zone2, zone3);
+        completeUpgrade(SystemApplication.proxy, version2, zone2, zone3);
+        convergeServices(SystemApplication.proxy, zone2, zone3);
         assertWantedVersion(SystemApplication.all(), version1, zone4);
 
         // zone 4:
         systemUpgrader.maintain();
-        completeUpgrade(allExceptZoneAndConfig, version2, zone4);
+        completeUpgrade(allExceptZone, version2, zone4);
         systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.configServer, version2, zone4);
-        systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.zone, version2, zone4);
+        completeUpgrade(SystemApplication.proxy, version2, zone4);
 
         // All done
         systemUpgrader.maintain();
@@ -237,7 +233,7 @@ public class SystemUpgraderTest {
         tester.upgradeSystem(version);
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version, zone1);
-        assertWantedVersion(SystemApplication.zone, version, zone1);
+        assertWantedVersion(SystemApplication.proxy, version, zone1);
 
         // Controller is downgraded
         tester.upgradeController(Version.fromString("6.4"));
@@ -245,7 +241,7 @@ public class SystemUpgraderTest {
         // Wanted version for zone remains unchanged
         systemUpgrader.maintain();
         assertWantedVersion(SystemApplication.configServer, version, zone1);
-        assertWantedVersion(SystemApplication.zone, version, zone1);
+        assertWantedVersion(SystemApplication.proxy, version, zone1);
     }
 
     @Test
@@ -257,10 +253,10 @@ public class SystemUpgraderTest {
         tester.upgradeSystem(version1);
         systemUpgrader.maintain();
         assertCurrentVersion(List.of(SystemApplication.configServerHost, SystemApplication.proxyHost,
-                                     SystemApplication.configServer, SystemApplication.zone),
+                                     SystemApplication.configServer, SystemApplication.proxy),
                              version1, zone1);
         assertCurrentVersion(List.of(SystemApplication.configServerHost, SystemApplication.proxyHost,
-                                     SystemApplication.configServer, SystemApplication.zone),
+                                     SystemApplication.configServer, SystemApplication.proxy),
                              version1, zone2);
 
         // System starts upgrading to next version
@@ -271,48 +267,65 @@ public class SystemUpgraderTest {
         systemUpgrader.maintain();
         completeUpgrade(SystemApplication.configServer, version2, zone1);
         systemUpgrader.maintain();
-        completeUpgrade(SystemApplication.zone, version2, zone1);
-        convergeServices(SystemApplication.zone, zone1);
+        completeUpgrade(SystemApplication.proxy, version2, zone1);
+        convergeServices(SystemApplication.proxy, zone1);
 
         // Confidence is reduced to broken and next zone is not scheduled for upgrade
         tester.upgrader().overrideConfidence(version2, VespaVersion.Confidence.broken);
         tester.computeVersionStatus();
         systemUpgrader.maintain();
         assertWantedVersion(List.of(SystemApplication.configServerHost, SystemApplication.proxyHost,
-                                    SystemApplication.configServer, SystemApplication.zone), version1, zone2);
+                                    SystemApplication.configServer, SystemApplication.proxy), version1, zone2);
+    }
+
+    @Test
+    public void does_not_deploy_proxy_app_in_zones_without_proxy() {
+        List<SystemApplication> applications = List.of(
+                SystemApplication.configServerHost, SystemApplication.configServer, SystemApplication.tenantHost);
+        tester.configServer().bootstrap(List.of(zone1.getId()), applications);
+        tester.configServer().disallowConvergenceCheck(SystemApplication.proxy.id());
+
+        SystemUpgrader systemUpgrader = systemUpgrader(UpgradePolicy.create().upgrade(zone1));
+
+        Version version1 = Version.fromString("6.5");
+        tester.upgradeSystem(version1);
+        systemUpgrader.maintain();
+        assertCurrentVersion(applications, version1, zone1);
     }
 
     /** Simulate upgrade of nodes allocated to given application. In a real system this is done by the node itself */
-    private void completeUpgrade(SystemApplication application, Version version, ZoneId... zones) {
+    private void completeUpgrade(SystemApplication application, Version version, ZoneApi... zones) {
         assertWantedVersion(application, version, zones);
-        for (ZoneId zone : zones) {
+        for (ZoneApi zone : zones) {
             for (Node node : listNodes(zone, application)) {
-                nodeRepository().putByHostname(zone, new Node(node.hostname(), node.state(), node.type(), node.owner(),
-                                                              node.wantedVersion(), node.wantedVersion()));
+                nodeRepository().putByHostname(
+                        zone.getId(),
+                        new Node(node.hostname(), node.state(), node.type(), node.owner(), node.wantedVersion(), node.wantedVersion()));
             }
 
             assertCurrentVersion(application, version, zone);
         }
     }
 
-    private void convergeServices(SystemApplication application, ZoneId... zones) {
-        for (ZoneId zone : zones) {
-            tester.controllerTester().configServer().convergeServices(application.id(), zone);
+    private void convergeServices(SystemApplication application, ZoneApi... zones) {
+        for (ZoneApi zone : zones) {
+            tester.controllerTester().configServer().convergeServices(application.id(), zone.getId());
         }
     }
 
-    private void completeUpgrade(List<SystemApplication> applications, Version version, ZoneId... zones) {
+    private void completeUpgrade(List<SystemApplication> applications, Version version, ZoneApi... zones) {
         applications.forEach(application -> completeUpgrade(application, version, zones));
     }
 
-    private void failNodeIn(ZoneId zone, SystemApplication application) {
-        List<Node> nodes = nodeRepository().list(zone, application.id());
+    private void failNodeIn(ZoneApi zone, SystemApplication application) {
+        List<Node> nodes = nodeRepository().list(zone.getId(), application.id());
         if (nodes.isEmpty()) {
             throw new IllegalArgumentException("No nodes allocated to " + application.id());
         }
         Node node = nodes.get(0);
-        nodeRepository().putByHostname(zone, new Node(node.hostname(), Node.State.failed, node.type(), node.owner(),
-                                                      node.currentVersion(), node.wantedVersion()));
+        nodeRepository().putByHostname(
+                zone.getId(),
+                new Node(node.hostname(), Node.State.failed, node.type(), node.owner(), node.currentVersion(), node.wantedVersion()));
     }
 
     private void assertSystemVersion(Version version) {
@@ -323,33 +336,33 @@ public class SystemUpgraderTest {
         assertEquals(version, tester.controller().versionStatus().controllerVersion().get().versionNumber());
     }
 
-    private void assertWantedVersion(SystemApplication application, Version version, ZoneId... zones) {
+    private void assertWantedVersion(SystemApplication application, Version version, ZoneApi... zones) {
         assertVersion(application, version, Node::wantedVersion, zones);
     }
 
-    private void assertCurrentVersion(SystemApplication application, Version version, ZoneId... zones) {
+    private void assertCurrentVersion(SystemApplication application, Version version, ZoneApi... zones) {
         assertVersion(application, version, Node::currentVersion, zones);
     }
 
-    private void assertWantedVersion(List<SystemApplication> applications, Version version, ZoneId... zones) {
+    private void assertWantedVersion(List<SystemApplication> applications, Version version, ZoneApi... zones) {
         applications.forEach(application -> assertVersion(application, version, Node::wantedVersion, zones));
     }
 
-    private void assertCurrentVersion(List<SystemApplication> applications, Version version, ZoneId... zones) {
+    private void assertCurrentVersion(List<SystemApplication> applications, Version version, ZoneApi... zones) {
         applications.forEach(application -> assertVersion(application, version, Node::currentVersion, zones));
     }
 
     private void assertVersion(SystemApplication application, Version version, Function<Node, Version> versionField,
-                               ZoneId... zones) {
-        for (ZoneId zone : requireNonEmpty(zones)) {
+                               ZoneApi... zones) {
+        for (ZoneApi zone : requireNonEmpty(zones)) {
             for (Node node : listNodes(zone, application)) {
                 assertEquals(application + " version", version, versionField.apply(node));
             }
         }
     }
 
-    private List<Node> listNodes(ZoneId zone, SystemApplication application) {
-        return nodeRepository().list(zone, application.id()).stream()
+    private List<Node> listNodes(ZoneApi zone, SystemApplication application) {
+        return nodeRepository().list(zone.getId(), application.id()).stream()
                                .filter(SystemUpgrader::eligibleForUpgrade)
                                .collect(Collectors.toList());
     }
