@@ -8,11 +8,11 @@ import com.yahoo.config.provision.Capacity;
 import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.config.provision.DockerImage;
 import com.yahoo.config.provision.Flavor;
-import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.HostFilter;
 import com.yahoo.config.provision.HostSpec;
 import com.yahoo.config.provision.InstanceName;
 import com.yahoo.config.provision.NodeFlavors;
+import com.yahoo.config.provision.NodeResources;
 import com.yahoo.config.provision.NodeType;
 import com.yahoo.config.provision.ProvisionLogger;
 import com.yahoo.config.provision.TenantName;
@@ -30,6 +30,7 @@ import com.yahoo.vespa.hosted.provision.NodeList;
 import com.yahoo.vespa.hosted.provision.NodeRepository;
 import com.yahoo.vespa.hosted.provision.lb.LoadBalancerServiceMock;
 import com.yahoo.vespa.hosted.provision.node.Agent;
+import com.yahoo.vespa.hosted.provision.node.IP;
 import com.yahoo.vespa.hosted.provision.node.filter.NodeHostFilter;
 import com.yahoo.vespa.hosted.provision.persistence.NameResolver;
 import com.yahoo.vespa.hosted.provision.testutils.MockNameResolver;
@@ -41,7 +42,6 @@ import com.yahoo.vespa.service.duper.ConfigServerApplication;
 import java.time.temporal.TemporalAmount;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
@@ -128,27 +128,32 @@ public class ProvisioningTester {
     public CapacityPolicies capacityPolicies() { return capacityPolicies; }
     public NodeList getNodes(ApplicationId id, Node.State ... inState) { return new NodeList(nodeRepository.getNodes(id, inState)); }
 
-    public void patchNode(Node node) { nodeRepository.write(node); }
+    public void patchNode(Node node) { nodeRepository.write(node, () -> {}); }
 
-    public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, int nodeCount, int groups, NodeResources flavor) {
-        return prepare(application, cluster, nodeCount, groups, false, flavor);
+    public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, int nodeCount, int groups, NodeResources resources) {
+        return prepare(application, cluster, nodeCount, groups, false, resources);
     }
 
-    public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, int nodeCount, int groups, boolean required, NodeResources flavor) {
-        return prepare(application, cluster, Capacity.fromCount(nodeCount, Optional.ofNullable(flavor), required, true), groups);
+    public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, int nodeCount, int groups, boolean required, NodeResources resources) {
+        return prepare(application, cluster, Capacity.fromCount(nodeCount, Optional.ofNullable(resources), required, true), groups);
     }
 
     public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, Capacity capacity, int groups) {
+        return prepare(application, cluster, capacity, groups, true);
+    }
+
+    public List<HostSpec> prepare(ApplicationId application, ClusterSpec cluster, Capacity capacity, int groups, boolean idempotentPrepare) {
         Set<String> reservedBefore = toHostNames(nodeRepository.getNodes(application, Node.State.reserved));
         Set<String> inactiveBefore = toHostNames(nodeRepository.getNodes(application, Node.State.inactive));
-        // prepare twice to ensure idempotence
         List<HostSpec> hosts1 = provisioner.prepare(application, cluster, capacity, groups, provisionLogger);
-        List<HostSpec> hosts2 = provisioner.prepare(application, cluster, capacity, groups, provisionLogger);
-        assertEquals(hosts1, hosts2);
+        if (idempotentPrepare) { // prepare twice to ensure idempotence
+            List<HostSpec> hosts2 = provisioner.prepare(application, cluster, capacity, groups, provisionLogger);
+            assertEquals(hosts1, hosts2);
+        }
         Set<String> newlyActivated = toHostNames(nodeRepository.getNodes(application, Node.State.reserved));
         newlyActivated.removeAll(reservedBefore);
         newlyActivated.removeAll(inactiveBefore);
-        return hosts2;
+        return hosts1;
     }
 
     public void activate(ApplicationId application, Collection<HostSpec> hosts) {
@@ -227,7 +232,17 @@ public class ProvisioningTester {
         return makeReadyNodes(n, flavor, NodeType.tenant);
     }
 
+    public List<Node> makeReadyNodes(int n, NodeResources resources) {
+        return makeReadyNodes(n, resources, NodeType.tenant);
+    }
+
     public List<Node> makeReadyNodes(int n, String flavor, NodeType type) {
+        return makeReadyNodes(n, asFlavor(flavor, type), type);
+    }
+    public List<Node> makeReadyNodes(int n, NodeResources resources, NodeType type) {
+        return makeReadyNodes(n, new Flavor(resources), type, 0);
+    }
+    public List<Node> makeReadyNodes(int n, Flavor flavor, NodeType type) {
         return makeReadyNodes(n, flavor, type, 0);
     }
 
@@ -235,7 +250,10 @@ public class ProvisioningTester {
         return makeProvisionedNodes(count, flavor, type, ipAddressPoolSize, false);
     }
 
-    public List<Node> makeProvisionedNodes(int n, String flavorName, NodeType type, int ipAddressPoolSize, boolean dualStack) {
+    public List<Node> makeProvisionedNodes(int n, String flavor, NodeType type, int ipAddressPoolSize, boolean dualStack) {
+        return makeProvisionedNodes(n, asFlavor(flavor, type), type, ipAddressPoolSize, dualStack);
+    }
+    public List<Node> makeProvisionedNodes(int n, Flavor flavor, NodeType type, int ipAddressPoolSize, boolean dualStack) {
         List<Node> nodes = new ArrayList<>(n);
 
         for (int i = 0; i < n; i++) {
@@ -272,21 +290,12 @@ public class ProvisioningTester {
                     nameResolver.addRecord(String.format("node-%d-of-%s", poolIp, hostname), ipv4Addr);
                 }
             }
-            Optional<Flavor> flavor = nodeFlavors.getFlavor(flavorName);
-            if (flavor.isEmpty()) {
-                if (type == NodeType.tenant) // Tenant nodes can have any (docker) flavor
-                    flavor = Optional.of(new Flavor(NodeResources.fromLegacyName(flavorName)));
-                else
-                    throw new IllegalArgumentException("No flavor '" + flavorName + "'");
-            }
-
             nodes.add(nodeRepository.createNode(hostname,
                                                 hostname,
-                                                hostIps,
-                                                ipAddressPool,
+                                                new IP.Config(hostIps, ipAddressPool),
                                                 Optional.empty(),
                                                 Optional.empty(),
-                                                flavor.get(),
+                                                flavor,
                                                 type));
         }
         nodes = nodeRepository.addNodes(nodes);
@@ -304,7 +313,8 @@ public class ProvisioningTester {
             nameResolver.addRecord(hostname, ipv4);
             Node node = nodeRepository.createNode(hostname,
                     hostname,
-                    Collections.singleton(ipv4),
+                    new IP.Config(Set.of(ipv4), Set.of()),
+                    Optional.empty(),
                     Optional.empty(),
                     nodeFlavors.getFlavorOrThrow(flavor),
                     NodeType.config);
@@ -326,37 +336,58 @@ public class ProvisioningTester {
     }
 
     public List<Node> makeReadyNodes(int n, String flavor, NodeType type, int ipAddressPoolSize) {
+        return makeReadyNodes(n, asFlavor(flavor, type), type, ipAddressPoolSize);
+    }
+    public List<Node> makeReadyNodes(int n, Flavor flavor, NodeType type, int ipAddressPoolSize) {
         return makeReadyNodes(n, flavor, type, ipAddressPoolSize, false);
     }
 
     public List<Node> makeReadyNodes(int n, String flavor, NodeType type, int ipAddressPoolSize, boolean dualStack) {
+        return makeReadyNodes(n, asFlavor(flavor, type), type, ipAddressPoolSize, dualStack);
+    }
+    public List<Node> makeReadyNodes(int n, Flavor flavor, NodeType type, int ipAddressPoolSize, boolean dualStack) {
         List<Node> nodes = makeProvisionedNodes(n, flavor, type, ipAddressPoolSize, dualStack);
         nodes = nodeRepository.setDirty(nodes, Agent.system, getClass().getSimpleName());
         return nodeRepository.setReady(nodes, Agent.system, getClass().getSimpleName());
     }
 
+    private Flavor asFlavor(String flavorString, NodeType type) {
+        Optional<Flavor> flavor = nodeFlavors.getFlavor(flavorString);
+        if (flavor.isEmpty()) {
+            // TODO: Remove the need for this by always adding hosts with a given capacity
+            if (type == NodeType.tenant) // Tenant nodes can have any (docker) flavor
+                flavor = Optional.of(new Flavor(NodeResources.fromLegacyName(flavorString)));
+            else
+                throw new IllegalArgumentException("No flavor '" + flavorString + "'");
+        }
+        return flavor.get();
+    }
+
     /** Creates a set of virtual docker hosts */
-    public List<Node> makeReadyVirtualDockerHosts(int n, NodeResources flavor) {
-        return makeReadyVirtualNodes(n, 1, flavor, Optional.empty(),
-                i -> "dockerHost" + i, NodeType.host);
+    public List<Node> makeDockerHosts(int n, NodeResources resources) {
+        return makeDockerHosts(n, resources, "dockerHost");
+    }
+
+    public List<Node> makeDockerHosts(int n, NodeResources resources, String namePrefix) {
+        return makeReadyVirtualNodes(n, 1, resources, Optional.empty(), i -> namePrefix + i, NodeType.host);
     }
 
     /** Creates a set of virtual docker nodes on a single docker host starting with index 1 and increasing */
-    public List<Node> makeReadyVirtualDockerNodes(int n, NodeResources flavor, String dockerHostId) {
-        return makeReadyVirtualNodes(n, 1, flavor, Optional.of(dockerHostId),
-                i -> String.format("%s-%03d", dockerHostId, i), NodeType.tenant);
+    public List<Node> makeReadyVirtualDockerNodes(int n, NodeResources resources, String dockerHostId) {
+        return makeReadyVirtualNodes(n, 1, resources, Optional.of(dockerHostId),
+                                     i -> String.format("%s-%03d", dockerHostId, i), NodeType.tenant);
     }
 
     /** Creates a single of virtual docker node on a single parent host */
-    public List<Node> makeReadyVirtualDockerNode(int index, NodeResources flavor, String dockerHostId) {
-        return makeReadyVirtualNodes(1, index, flavor, Optional.of(dockerHostId),
-                i -> String.format("%s-%03d", dockerHostId, i), NodeType.tenant);
+    public List<Node> makeReadyVirtualDockerNode(int index, NodeResources resources, String dockerHostId) {
+        return makeReadyVirtualNodes(1, index, resources, Optional.of(dockerHostId),
+                                     i -> String.format("%s-%03d", dockerHostId, i), NodeType.tenant);
     }
 
     /** Creates a set of virtual nodes without a parent host */
-    public List<Node> makeReadyVirtualNodes(int n, NodeResources flavor) {
-        return makeReadyVirtualNodes(n, 0, flavor, Optional.empty(),
-                i -> UUID.randomUUID().toString(), NodeType.tenant);
+    public List<Node> makeReadyVirtualNodes(int n, NodeResources resources) {
+        return makeReadyVirtualNodes(n, 0, resources, Optional.empty(),
+                                     i -> UUID.randomUUID().toString(), NodeType.tenant);
     }
 
     /** Creates a set of virtual nodes on a single parent host */
