@@ -9,10 +9,7 @@ import com.yahoo.vespa.applicationmodel.ConfigId;
 import com.yahoo.vespa.applicationmodel.ServiceStatus;
 import com.yahoo.vespa.applicationmodel.ServiceStatusInfo;
 import com.yahoo.vespa.applicationmodel.ServiceType;
-import com.yahoo.vespa.flags.FlagSource;
-import com.yahoo.vespa.flags.Flags;
 import com.yahoo.vespa.service.duper.DuperModelManager;
-import com.yahoo.vespa.service.duper.ZoneApplication;
 import com.yahoo.vespa.service.executor.RunletExecutorImpl;
 import com.yahoo.vespa.service.manager.HealthMonitorApi;
 import com.yahoo.vespa.service.manager.MonitorManager;
@@ -54,40 +51,32 @@ public class HealthMonitorManager implements MonitorManager, HealthMonitorApi {
 
     private final ConcurrentHashMap<ApplicationId, ApplicationHealthMonitor> healthMonitors = new ConcurrentHashMap<>();
     private final DuperModelManager duperModel;
-    private final boolean monitorTenantHostHealth;
     private final ApplicationHealthMonitorFactory applicationHealthMonitorFactory;
 
     @Inject
-    public HealthMonitorManager(DuperModelManager duperModel, FlagSource flagSource) {
-        this(duperModel, Flags.MONITOR_TENANT_HOST_HEALTH.bindTo(flagSource).value());
-    }
-
-    private HealthMonitorManager(DuperModelManager duperModel, boolean monitorTenantHostHealth) {
-        this(duperModel, monitorTenantHostHealth,
+    public HealthMonitorManager(DuperModelManager duperModel) {
+        this(duperModel,
                 new StateV1HealthModel(
                         TARGET_HEALTH_STALENESS,
                         HEALTH_REQUEST_TIMEOUT,
                         KEEP_ALIVE,
-                        new RunletExecutorImpl(THREAD_POOL_SIZE),
-                        monitorTenantHostHealth));
+                        new RunletExecutorImpl(THREAD_POOL_SIZE)));
     }
 
-    private HealthMonitorManager(DuperModelManager duperModel, boolean monitorTenantHostHealth, StateV1HealthModel healthModel) {
-        this(duperModel, monitorTenantHostHealth, id -> new ApplicationHealthMonitor(id, healthModel));
+    private HealthMonitorManager(DuperModelManager duperModel, StateV1HealthModel healthModel) {
+        this(duperModel, id -> new ApplicationHealthMonitor(id, healthModel));
     }
 
     /** Default access due to testing. */
     HealthMonitorManager(DuperModelManager duperModel,
-                         boolean monitorTenantHostHealth,
                          ApplicationHealthMonitorFactory applicationHealthMonitorFactory) {
         this.duperModel = duperModel;
-        this.monitorTenantHostHealth = monitorTenantHostHealth;
         this.applicationHealthMonitorFactory = applicationHealthMonitorFactory;
     }
 
     @Override
     public void applicationActivated(ApplicationInfo application) {
-        if (wouldMonitor(application.getApplicationId())) {
+        if (duperModel.isSupportedInfraApplication(application.getApplicationId())) {
             healthMonitors
                     .computeIfAbsent(application.getApplicationId(), applicationHealthMonitorFactory::create)
                     .monitor(application);
@@ -109,40 +98,11 @@ public class HealthMonitorManager implements MonitorManager, HealthMonitorApi {
                                        ConfigId configId) {
         ApplicationHealthMonitor monitor = healthMonitors.get(applicationId);
 
-        if (!monitorTenantHostHealth && ZoneApplication.isNodeAdminService(applicationId, clusterId, serviceType)) {
-            // Legacy: The zone app is not health monitored (monitor == null), but the node-admin cluster's services
-            // are hard-coded to be UP
-            return new ServiceStatusInfo(ServiceStatus.UP);
-        }
-
         if (monitor == null) {
             return new ServiceStatusInfo(ServiceStatus.NOT_CHECKED);
         }
 
-        if (monitorTenantHostHealth && applicationId.equals(ZoneApplication.getApplicationId())) {
-            // New: The zone app is health monitored (monitor != null), possibly even the routing cluster
-            // which is a normal jdisc container (unnecessary but harmless), but the node-admin cluster
-            // are tenant Docker hosts running host admin that are monitored via /state/v1/health.
-            if (ZoneApplication.isNodeAdminService(applicationId, clusterId, serviceType)) {
-                return monitor.getStatus(applicationId, clusterId, serviceType, configId);
-            } else {
-                return new ServiceStatusInfo(ServiceStatus.NOT_CHECKED);
-            }
-        }
-
         return monitor.getStatus(applicationId, clusterId, serviceType, configId);
-    }
-
-    private boolean wouldMonitor(ApplicationId id) {
-        if (duperModel.isSupportedInfraApplication(id)) {
-            return true;
-        }
-
-        if (monitorTenantHostHealth && id.equals(ZoneApplication.getApplicationId())) {
-            return true;
-        }
-
-        return false;
     }
 
     @Override
@@ -154,7 +114,7 @@ public class HealthMonitorManager implements MonitorManager, HealthMonitorApi {
     public Map<ServiceId, ServiceStatusInfo> getServices(ApplicationId applicationId) {
         ApplicationHealthMonitor applicationHealthMonitor = healthMonitors.get(applicationId);
         if (applicationHealthMonitor == null) {
-            return Collections.emptyMap();
+            return Map.of();
         }
 
         return applicationHealthMonitor.getAllServiceStatuses();
